--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <div class="container">
         <div class="navbar">
           <div class="logo">
-            <a href=""> <img src="./images/logo.png" width="125px" alt="" /></a>
+            <a href="./index.html">
+              <img src="./images/logo.png" width="125px" alt=""
+            /></a>
           </div>
           <nav>
             <ul id="MenuItems">
@@ -22,7 +24,7 @@
               <li><a href="">Account</a></li>
             </ul>
           </nav>
-          <a href=""
+          <a href="./shoppingcart.html"
             ><img src="./images/cart.png" alt="" width="30px" height="30px"
           /></a>
           <a href=""> </a>
@@ -58,7 +60,7 @@
       <div class="small-container">
         <div class="row">
           <div class="col-3">
-            <a href=""><img src="./images/category-1.jpg" alt="" /></a>
+            <a href=""><img src="./images/category-1.jpg" alt="" /> </a>
           </div>
           <div class="col-3">
             <a href=""><img src="./images/category-2.jpg" alt="" /></a>
