--- a/product.html
+++ b/product.html
@@ -10,7 +10,9 @@
     <div class="container">
       <div class="navbar">
         <div class="logo">
-          <a href=""> <img src="./images/logo.png" width="125px" alt="" /></a>
+          <a href="./index.html">
+            <img src="./images/logo.png" width="125px" alt=""
+          /></a>
         </div>
         <nav>
           <ul id="MenuItems">
@@ -21,7 +23,7 @@
             <li><a href="">Account</a></li>
           </ul>
         </nav>
-        <a href=""
+        <a href="./shoppingcart.html"
           ><img src="./images/cart.png" alt="" width="30px" height="30px"
         /></a>
         <a href=""> </a>
